test/syntax/pass/causality/1.sync
let node pre_test x = y where
  rec y = 0 -> (pre y + x)
