test/syntax/fail/when/params_sampled_clock.sync

let node f x y =
  merge true (true -> y) (false -> y + 1)
